--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "bignumber.js": "^9.0.2",
     "framer-motion": "^6.5.1",
     "graphql": "^16.5.0",
+    "moment": "^2.29.4",
     "next": "12.2.3",
     "react": "18.2.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10"
   },
